--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "unicorn/fuzzware-unicorn"]
 	path = unicorn/fuzzware-unicorn
-	url = ../unicorn
+	url = https://github.com/fuzzware-fuzzer/unicorn
